@@ -1,20 +1,13 @@
 
 cmake_minimum_required(VERSION 3.8)
 
-# Generate a Python wrapper that covers QuantLib and QuantExt
+project(ORE-SWIG)
+
 #add_subdirectory(QuantExt-SWIG/Python) 
-
-# Generate a Python wrapper that covers QuantLib, QuantExt and OREData
 #add_subdirectory(OREData-SWIG/Python) 
-
-# Generate a Python wrapper that covers QuantLib, QuantExt, OREData and OREAnalytics
 add_subdirectory(OREAnalytics-SWIG/Python) 
-
-# Generate a Java wrapper that covers QuantLib and QuantExt
-#add_subdirectory(QuantExt-SWIG/Java) 
-
-# Generate a Java wrapper that covers QuantLib, QuantExt and OREData
-#add_subdirectory(OREData-SWIG/Java)
-
-# Generate a Java wrapper that covers QuantLib, QuantExt, OREData and OREAnalytics
 #add_subdirectory(OREAnalytics-SWIG/Java) 
+#add_subdirectory(OREPlus-SWIG/Python) 
+#add_subdirectory(QuantExt-SWIG/Java) 
+#add_subdirectory(OREData-SWIG/Java)
+#add_subdirectory(OREPlus-SWIG/Java) 
